begin to inspect workers