@@ -24,6 +24,7 @@ test {
     jvmArgs '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED'
     jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
     jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.util.concurrent.locks=ALL-UNNAMED'
 
     // 添加Java Agent
     doFirst {
